Add a bunch of basic files

--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
         <h1>
             jacobsen's portfolio
         </h1>
+        
+        <h2>
+            My Projects
+        </h2>
+
+        <ol>
+            <li>Soundboard</li>
+        </ol>
     </body>
 </html>
