Fix URL and add more couple items to project  list

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </h2>
 
         <ol>
-            <li>Soundboard</li>
+            <li><a href="google.com">Soundboard</a></li>
+            <li><a href="google.com">CLicker</a></li>
         </ol>
     </body>
 </html>
