--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </h2>
 
         <ol>
-            <li><a href="google.com">Soundboard</a></li>
-            <li><a href="google.com">CLicker</a></li>
+            <li><a href="www.google.com">Soundboard</a></li>
+            <li><a href="www.google.com">CLicker</a></li>
         </ol>
     </body>
 </html>
