--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>
             jacobsen's Portfolio
         </title>
+        <link rel="stylesheet" type="text/css" href="style.css"
     </head>
 
     <body>
